--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "node cli.js -n 35.92 -w 79.05 -z America/New_York"
   },
   "repository": {
-    "type": "module",
+    "type": "git",
     "url": "git+https://github.com/comp426-2022-fall/a02-TracyZhao2002.git"
   },
   "author": "TongyuZhao",
@@ -18,6 +18,7 @@
   "bin": {
     "galosh.js": "./cli.js"
   },
+  "type": "module",
   "homepage": "https://github.com/comp426-2022-fall/a02-TracyZhao2002#readme",
   "dependencies": {
     "minimist": "^1.2.6",
